@@ -1,3 +1,4 @@
+* FEA#6406 Possibilité de conserver des lignes lors d'un import JSON
 * OTH#0000 Correctif de typo dans la récupération du message d'échec de la tâche
 * OTH#0000 Correctif de typo dans le renommage d'une fonction
 * FEA#6392 Ajout d'événements lors du succès ou l'échec du traitement d'une tâche asynchrone
